fix: add a follback for overflow: clip

--- a/src/scss/base/_globals.scss
+++ b/src/scss/base/_globals.scss
@@ -17,7 +17,13 @@
 }
 
 .content {
-  overflow-x: clip;
+  overflow-x: hidden;
+}
+
+@supports (overflow: clip) {
+  .content {
+    overflow-x: clip;
+  }
 }
 
 a,
